welcome.lessons.welcome.summative.Moria.scala.code
retourne()
while (!estFaceMur()){
  while (!estSurBiscuit){
      avance()
    }
      prendBiscuit()
      retourne()
      while (!estSurBiscuit ){
        avance()
      }
 			recule()
      poseBiscuit()
      retourne()
  ChercherBiscuit()
    
  	
def ChercherBiscuit() {  
  while (!estSurBiscuit){
      avance()
    }
      prendBiscuit()
      retourne()
      while (!estSurBiscuit ){
        avance()
      }
 			recule()
      poseBiscuit()
      retourne()
    	
 }
 
